--- a/page2.html
+++ b/page2.html
@@ -24,22 +24,22 @@
         }
         #startButton {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 1308px;
-            height: 190px;
-            font-size: 107px;
-            color: black;
-            background-color: white;
-            font-family: 'Gotham', sans-serif;
-            text-decoration: none;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            position: absolute;
-            bottom: 400px; /* Adjust this value as needed */
-            left: 50%;
-            transform: translateX(-50%);
+    align-items: center;
+    justify-content: center;
+    width: 74%;
+    height: 5%;
+    font-size: 120%;
+    color: black;
+    background-color: white;
+    font-family: 'Gotham', sans-serif;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 12%;
+    left: 50%;
+    transform: translateX(-50%);
         }
     </style>
 </head>
