--- a/page7.html
+++ b/page7.html
@@ -18,7 +18,7 @@
             padding: 0;
             height: 100%;
             overflow: hidden;
-            background: url('images/bg2.png') no-repeat center center fixed;
+            background: url('images/bg7.png') no-repeat center center fixed;
             background-size: cover;
             position: relative;
         }
@@ -30,8 +30,8 @@
     height: 5%;
     font-size: 500%;
 
-    color: black;
-    background-color: white;
+    color: white;
+    background-color:#303030;
     font-family: 'Gotham', sans-serif;
     text-decoration: none;
     border: none;
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <a id="startButton" href="page3.html">Continue</a>
+    <a id="startButton" href="index.html">Finish</a>
     <script>
         function startFullscreen() {
             document.getElementById('startButton').style.display = 'none';
