adjsut video size

--- a/page6.html
+++ b/page6.html
@@ -28,6 +28,12 @@
             transform: translate(-50%, -50%);
             width: 60%; /* Adjust width as needed */
             z-index: 1; /* Ensure the video is above other content */
+            background-color: red;
+        }
+
+        #introVideo {
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
