--- a/page7.html
+++ b/page7.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fullscreen Image</title>
     <style>
-          @font-face {
-            font-family: 'Gotham';
-            src: url('fonts/Gotham-Book.woff2') format('woff2'),
-                 url('fonts/Gotham-Book.woff') format('woff'),
-                 url('fonts/Gotham-Book.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-            background: url('images/bg7.png') no-repeat center center fixed;
-            background-size: cover;
-            position: relative;
-        }
-        #startButton {
-            display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 74%;
-    height: 5%;
-    font-size: 500%;
-
-    color: white;
-    background-color:#303030;
-    font-family: 'Gotham', sans-serif;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 12%;
-    left: 50%;
-    transform: translateX(-50%);
-        }
+      @font-face {
+        font-family: "Gotham";
+        src: url("fonts/Gotham-Book.woff2") format("woff2"),
+          url("fonts/Gotham-Book.woff") format("woff"),
+          url("fonts/Gotham-Book.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+      }
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+        background: url("images/bg7.png") no-repeat center center fixed;
+        background-size: cover;
+        position: relative;
+      }
+      #startButton {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 60%;
+        height: 5%;
+        font-size: 500%;
+        color: black;
+        background-color: white;
+        font-family: "Gotham", sans-serif;
+        text-decoration: none;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        position: absolute;
+        bottom: 12%;
+        left: 50%;
+        transform: translateX(-50%);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <a id="startButton" href="index.html">Finish</a>
     <script>
-        function startFullscreen() {
-            document.getElementById('startButton').style.display = 'none';
-        }
+      function startFullscreen() {
+        document.getElementById("startButton").style.display = "none";
+      }
     </script>
-</body>
+  </body>
 </html>
