--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         justify-content: center;
         width: 60%;
         height: 5%;
-        font-size: 500%;
+        font-size: 5vw;
         color: black;
         background-color: white;
         font-family: "Gotham", sans-serif;
