--- a/page6.html
+++ b/page6.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div id="videoContainer">
-      <video id="introVideo" src="videos/video.mp4" autoplay muted></video>
+      <video id="introVideo" src="videos/video.mp4" controls></video>
     </div>
   </body>
   <script>
