--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <title>LOREAL PARIS</title>
     <style>
       @font-face {
-        font-family: "Gotham";
-        src: url("fonts/Gotham-Book.woff2") format("woff2"),
-          url("fonts/Gotham-Book.woff") format("woff"),
-          url("fonts/Gotham-Book.ttf") format("truetype");
-        font-weight: normal;
-        font-style: normal;
+        font-family: "LOREAL";
+        src: url("font/font.otf") format("opentype");
       }
 
       body,
@@ -28,13 +24,14 @@
       #startButton {
         display: flex;
         align-items: center;
+        padding: 5px 10px;
         justify-content: center;
         width: 60%;
         height: 5%;
         font-size: 5vw;
         color: black;
         background-color: white;
-        font-family: "Gotham", sans-serif;
+        font-family: "LOREAL", sans-serif;
         text-decoration: none;
         border: none;
         border-radius: 5px;
