--- a/page6.html
+++ b/page6.html
@@ -6,12 +6,8 @@
     <title>LOREAL PARIS</title>
     <style>
       @font-face {
-        font-family: "Gotham";
-        src: url("fonts/Gotham-Book.woff2") format("woff2"),
-          url("fonts/Gotham-Book.woff") format("woff"),
-          url("fonts/Gotham-Book.ttf") format("truetype");
-        font-weight: normal;
-        font-style: normal;
+        font-family: "LOREAL";
+        src: url("font/font.otf") format("opentype");
       }
       body,
       html {
@@ -30,6 +26,7 @@
         width: 60%; /* Adjust width as needed */
         z-index: 1; /* Ensure the video is above other content */
         background-color: red;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       }
 
       #introVideo {
