--- a/page7.html
+++ b/page7.html
@@ -6,33 +6,32 @@
     <title>LOREAL PARIS</title>
     <style>
       @font-face {
-        font-family: "Gotham";
-        src: url("fonts/Gotham-Book.woff2") format("woff2"),
-          url("fonts/Gotham-Book.woff") format("woff"),
-          url("fonts/Gotham-Book.ttf") format("truetype");
-        font-weight: normal;
-        font-style: normal;
+        font-family: "LOREAL";
+        src: url("font/font.otf") format("opentype");
       }
+
       body,
       html {
         margin: 0;
         padding: 0;
         height: 100%;
         overflow: hidden;
-        background: url("images/bg7.png") no-repeat center center fixed;
+        background: url("images/bg1.png") no-repeat center center fixed;
         background-size: cover;
         position: relative;
       }
+
       #startButton {
         display: flex;
         align-items: center;
+        padding: 5px 10px;
         justify-content: center;
         width: 60%;
         height: 5%;
         font-size: 5vw;
         color: black;
         background-color: white;
-        font-family: "Gotham", sans-serif;
+        font-family: "LOREAL", sans-serif;
         text-decoration: none;
         border: none;
         border-radius: 5px;
