--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @font-face {
         font-family: "LOREAL";
-        src: url("font/font.otf") format("opentype");
+        src: url("font/font.OTF") format("opentype");
       }
 
       body,
