--- a/page3.html
+++ b/page3.html
@@ -158,13 +158,13 @@
       oils.forEach((oil) => {
         oil.style.opacity = 1;
 
-        oil.addEventListener("mousedown", handleScratchStart);
-        oil.addEventListener("mouseup", handleScratchEnd);
-        oil.addEventListener("mouseleave", handleScratchEnd);
+        // oil.addEventListener("mousedown", handleScratchStart);
+        // oil.addEventListener("mouseup", handleScratchEnd);
+        // oil.addEventListener("mouseleave", handleScratchEnd);
 
-        oil.addEventListener("touchstart", handleScratchStart);
-        oil.addEventListener("touchend", handleScratchEnd);
-        oil.addEventListener("touchcancel", handleScratchEnd);
+        // oil.addEventListener("touchstart", handleScratchStart);
+        // oil.addEventListener("touchend", handleScratchEnd);
+        // oil.addEventListener("touchcancel", handleScratchEnd);
 
         oil.addEventListener("click", handleTap);
       });
