--- a/page4.html
+++ b/page4.html
@@ -47,7 +47,6 @@
         height: auto;
         z-index: 1;
       }
-
       .blink {
         position: absolute;
         top: 48%;
@@ -55,14 +54,6 @@
         width: 17%;
         height: auto;
         z-index: 1;
-      }
-
-      .circle {
-        position: relative;
-        width: 330px; /* Example size */
-        height: 330px;
-        border-radius: 50%;
-        overflow: hidden;
       }
 
       .hand {
@@ -89,10 +80,28 @@
         bottom: -25px;
       }
 
+      .circle {
+        position: relative;
+        width: 165px; /* Example size */
+        height: 165px;
+        border-radius: 50%;
+        overflow: hidden;
+      }
+      #clock {
+        position: absolute;
+        top: 6%;
+        left: 70%;
+        width: 24%;
+        height: auto;
+        z-index: 1;
+      }
       .clock {
         position: absolute;
-        top: 12%;
-        right: 0;
+        top: 9%;
+        left: 88.5%;
+        width: 31%;
+        height: auto;
+        z-index: 1;
         transform: translate(-50%, -50%) rotate(300deg);
       }
     </style>
@@ -101,6 +110,7 @@
     <img src="images/oil1.png" alt="" class="oil1" />
     <img src="images/oil2.png" alt="" class="oil2" />
     <img src="images/oil3.png" alt="" class="oil3" />
+    <img src="images/clock.png" alt="" id="clock" class="oil3" />
 
     <div class="clock">
       <div class="circle">
@@ -158,7 +168,7 @@
         if (fillPercentage > maxFillPercentage)
           fillPercentage = maxFillPercentage;
 
-        circle.style.background = `conic-gradient(red 0% ${fillPercentage}%, transparent ${fillPercentage}% 100%)`;
+        circle.style.background = `conic-gradient(violet 0% ${fillPercentage}%, transparent ${fillPercentage}% 100%)`;
 
         // Calculate rotation angle based on maxDegrees
         const angle = (maxDegrees * fillPercentage) / maxFillPercentage;
