--- a/page3.html
+++ b/page3.html
@@ -105,11 +105,12 @@
 
       .circle {
         position: relative;
-        width: 15vw;
-        height: 9vh;
+        width: 13vw;
+        height: 13vw;
         border-radius: 50%;
         overflow: hidden;
       }
+
       #clock {
         position: absolute;
         top: 6%;
@@ -120,9 +121,8 @@
       }
       .clock {
         position: absolute;
-        top: 9%;
-        left: 88.5%;
-        width: 31%;
+        top: 13.4%;
+        left: 84%;
         height: auto;
         z-index: 1;
         transform: translate(-50%, -50%) rotate(300deg);
@@ -233,6 +233,8 @@
       const maxFillPercentage = (maxDegrees / 360) * 100; // Convert degrees to percentage
 
       function startAnimation() {
+        var img = document.getElementById("clock");
+        img.src = "images/clock.png";
         const interval = setInterval(() => {
           fillPercentage += 1; // Increase fill percentage
           // Ensure fillPercentage does not exceed maxFillPercentage
@@ -246,6 +248,8 @@
           // hand.style.transform = `rotate(${angle}deg)`; // Apply rotation
 
           if (fillPercentage >= maxFillPercentage) {
+            var img = document.getElementById("clock");
+            img.src = "images/clock1.png";
             clearInterval(interval); // Stop the interval when maxFillPercentage is reached
             setTimeout(() => {
               fillPercentage = 0; // Reset fillPercentage
