--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </head>
 
   <body>
-    <a id="startButton" href="page2.html">Click to Start</a>
+    <a id="startButton" href="page2.html">CLICK TO START</a>
     <script>
       function startFullscreen() {
         document.getElementById("startButton").style.display = "none";
