--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body>
-    <a id="startButton" href="page3.html">Continue</a>
+    <a id="startButton" href="page3.html">CONTINUE</a>
     <script>
       function startFullscreen() {
         document.getElementById("startButton").style.display = "none";
