--- a/page7.html
+++ b/page7.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body>
-    <a id="startButton" href="index.html">Finish</a>
+    <a id="startButton" href="index.html">FINISH</a>
     <script>
       function startFullscreen() {
         document.getElementById("startButton").style.display = "none";
